
name:                elea
version:             0.1.0.0
synopsis:            Automated inductive theorem prover for the simply typed 
                     lambda calculus, based on fixpoint-fusion.
license:             MIT
author:              William Sonnex
maintainer:          will@sonnex.name                                 
category:            Theorem Provers
build-type:          Simple
cabal-version:       >=1.8

source-repository head
  type:              git
  location:          git://github.com/wsonnex/elea.git
  branch:            master

library
  hs-source-dirs:    src
  build-tools:       happy
  
  extensions:        DoAndIfThenElse
  
  build-depends:     base ==4.6.*, 
                     containers ==0.5.*, 
                     HUnit ==1.2.*, 
                     mtl ==2.1.*, 
                     transformers ==0.3.*, 
                     either ==4.1.*, 
                     fclabels ==1.1.*, 
                     semigroups ==0.12.*, 
                     text ==0.11.*,
                     uniplate ==1.6.*, 
                     MissingH ==1.2.*, 
                     keys ==3.10.*, 
                     tagged ==0.7.*, 
                     ghc-prim ==0.3.*, 
                     recursion-schemes ==4.0.*, 
                     semigroupoids ==4.0.*
                     
executable elea  
  hs-source-dirs:    src
  main-is:           Main.hs
  build-depends:     base, elea
  