
name:                 elea
version:              0.1.1.0
synopsis:             Automated inductive theorem prover for the simply typed 
                      lambda calculus, based on fixpoint-fusion.
license:              MIT
license-file:         LICENSE
author:               William Sonnex
maintainer:           will@sonnex.name                                 
category:             Theorem Provers
build-type:           Simple
cabal-version:        >=1.10

source-repository head
  type:               git
  location:           git://github.com/wsonnex/elea.git
  branch:             master

executable elea
  hs-source-dirs:     src
  main-is:            Main.hs
  default-language:   Haskell2010
  
  default-extensions: CPP
                      DoAndIfThenElse
                      TemplateHaskell 
                      TypeOperators 
                      FunctionalDependencies 
                      GADTs 
                      MultiParamTypeClasses 
                      FlexibleContexts 
                      FlexibleInstances 
                      ScopedTypeVariables 
                      TypeSynonymInstances 
                      ViewPatterns 
                      TypeFamilies 
                      BangPatterns 
                      DeriveFunctor 
                      DeriveFoldable 
                      DeriveTraversable 
                      RecursiveDo 
                      RankNTypes 
                      GeneralizedNewtypeDeriving 
                      ConstraintKinds
                      PatternGuards
                      NoImplicitPrelude
                      StandaloneDeriving
  
  build-depends:      base >=4, 
                      containers >=0.5, 
                      HUnit >=1, 
                      mtl >=2, 
                      transformers >=0.3, 
                      either >=4, 
                      fclabels >=2 && <3, 
                      semigroups >=0.12, 
                      text >=0.11,
                      uniplate >=1.6, 
                      MissingH >=1.2,
                      tagged >=0.7, 
                      ghc-prim >=0.3, 
                      recursion-schemes >=4, 
                      semigroupoids >=4,
                      keys >=3,
                      lattices >=1,
                      test-framework-hunit >= 0.3,
                      test-framework >= 0.8
